--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 
                 </p>
             <br>
-            <p> I hope you enjoy the webpage! Check out the portfolio page!. <p class="k">This is an assigment on Web Programming and Design - CPAN-134-0NC by Sepideh Banihashemi</p></p>
+            <p class="k">This is an assigment on Web Programming and Design - CPAN-134-0NC given by Professor - Sepideh Banihashemi</p>
             <br>
-            <p class="my"><a href="http://127.0.0.1:5502/portfolio.html">Link to My Dream</a></p>
+            <p class=><a class="my" href="http://127.0.0.1:5502/portfolio.html">Link to My Dream Page</a></p>
+            <p class=><a class="my" href="https://github.com/lagrandecode/about-me">Link to My github on this project</a></p>
         
 
 
